CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(CUDA REQUIRED)

FILE(GLOB SOURCES "*.cu" "*.cpp" "*.c" "cuh" "*.h" "*.hpp")

IF(CUDA_FOUND)
  SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-std c++11")
  SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-gencode arch=compute_61,code=sm_61")

  IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-G;-g;-lineinfo;--ptxas-options=-v")
  ELSE()
    SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-O3;-g;-lineinfo;--ptxas-options=-v")
  ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")

  IF(OpenCV_FOUND)
    CUDA_INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
    CUDA_ADD_EXECUTABLE(imageFilteringGpu ${SOURCES})
    INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(imageFilteringGpu ${OpenCV_LIBS})
  ENDIF(OpenCV_FOUND)
ENDIF(CUDA_FOUND)
